--- a/fasttask/src/main/resources/application-test.properties
+++ b/fasttask/src/main/resources/application-test.properties
@@ -1,12 +1,19 @@
 # H2 Connection
-spring.datasource.url = jdbc:h2:mem:testdb
-spring.datasource.username = ioly
-spring.datasource.password = 
+spring.datasource.url = jdbc:mysql://localhost:3306/fasttask?useTimezone=true&serverTimezone=UTC
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driverClassName = org.h2.Driver
 
-# H2 Client
+# H2 Client (Console)
 spring.h2.console.enabled = true
-spring.h2.console.path=/h2-console
+spring.h2.console.path = /h2-console
 
-# Show SQL generated
+# JPA/Hibernate
+spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show_sql = true
 spring.jpa.properties.hibernate.format_sql = true
+
+# Configuração de DataSource
+spring.datasource.initialize = true
