--- a/fasttask/src/main/resources/application.properties
+++ b/fasttask/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 spring.application.name=fasttask
 
-spring.config.import=file:config.properties
+# Configuração do banco de dados (com valores diretos)
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://localhost:3306/fasttask?useTimezone=true&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.username = ${DB_USERNAME}
-spring.datasource.password = ${DB_PASSWORD}
-spring.datasource.url = ${DB_URL}
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+# Configuração JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update  
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Show SQL generated
-spring.jpa.show_sql = true
+# Mostrar o SQL gerado no console (útil para debug)
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true  
 
+# Configuração de data e hora
 spring.jackson.date-format=yyyy-MM-dd
