completa integração do back end, banco de dados e front end, faltando apenas adicionar campo para inserção de dados complementários

--- a/fasttask/pom.xml
+++ b/fasttask/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- Actuator (para gerenciamento e monitoramento da aplicação) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- Devtools (hot reload) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -71,15 +77,13 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
-    </dependencies>
 
-    <!-- Repositórios Maven -->
-    <repositories>
-        <repository>
-            <id>central</id>
-            <url>https://repo.maven.apache.org/maven2/</url>
-        </repository>
-    </repositories>
+        <!-- Spring Security para autenticação e autorização -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
