--- a/fasttask/src/main/resources/application.properties
+++ b/fasttask/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.url = jdbc:mysql://localhost:3306/fasttask?useTimezone=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+logging.level.org.springframework.web=DEBUG
+management.endpoints.web.exposure.include=*
+
+
 
 # Configuração JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update  
