--- a/fasttask/src/main/resources/application.properties
+++ b/fasttask/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=fasttask
 
 # Configuração do banco de dados (com valores diretos)
 spring.datasource.username = root
-spring.datasource.password = 102103
+spring.datasource.password = root
 spring.datasource.url = jdbc:mysql://localhost:3306/fasttask?useTimezone=true&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 logging.level.org.springframework.web=DEBUG
